# ChangeLog for app-portage/basc
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/basc/Attic/ChangeLog,v 1.5 2004/12/29 12:35:45 pvdabeel Exp $

* basc-1.5.0 (28 Dec 2004) 

  28 Dec 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> basc-1.5.0.ebuild :

  Client version Python rewrite, improved error handling.

* basc-1.4.0 (26 Dec 2004)

  26 Dec 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> basc-1.4.0.ebuild :
  
  New filesystem type detection and improved windowmanager detection.

* basc-1.3.9 (23 Dec 2004)

  23 Dec 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> basc-1.3.9.ebuild :
  
  Small upstream bugfix, only triggered when user forced client to run as root.

* basc-1.3.9 (22 Dec 2004)

  22 Dec 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> basc-1.3.9.ebuild :

  Initial import. Buildtime And Statistics Client for http://www.gentoo-stats.org