@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/basc
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/basc/Attic/ChangeLog,v 1.5 2004/12/29 12:35:45 pvdabeel Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/basc/Attic/ChangeLog,v 1.6 2004/12/30 19:59:28 dsd Exp $
+
+  30 Dec 2004; Daniel Drake <dsd@gentoo.org> metadata.xml:
+  Add Alexander Mieland as project maintainer
 
 * basc-1.5.0 (28 Dec 2004) 
 
